# server/src/generated/openapi/api.go
@@ -21,6 +21,13 @@ type AuthenticationAPIRouter interface {
 	PostLogin(http.ResponseWriter, *http.Request)
 }
 
+// CommentAPIRouter defines the required methods for binding the api requests to a responses for the CommentAPI
+// The CommentAPIRouter implementation should parse necessary information from the http request,
+// pass the data to a CommentAPIServicer to perform the required actions, then write the service results to the http response.
+type CommentAPIRouter interface {
+	PostComment(http.ResponseWriter, *http.Request)
+}
+
 // StatisticsAPIRouter defines the required methods for binding the api requests to a responses for the StatisticsAPI
 // The StatisticsAPIRouter implementation should parse necessary information from the http request,
 // pass the data to a StatisticsAPIServicer to perform the required actions, then write the service results to the http response.
@@ -34,6 +41,14 @@ type StatisticsAPIRouter interface {
 // and updated with the logic required for the API.
 type AuthenticationAPIServicer interface {
 	PostLogin(context.Context, LoginRequest) (ImplResponse, error)
+}
+
+// CommentAPIServicer defines the api actions for the CommentAPI service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can be ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type CommentAPIServicer interface {
+	PostComment(context.Context, int32, string, CommentRequest) (ImplResponse, error)
 }
 
 // StatisticsAPIServicer defines the api actions for the StatisticsAPI service
